[package]
name = "disqus-proxy"
version = "0.1.0"
authors = ["Li Jinpei <leekingp1994@163.com>"]
edition = "2018"

[dependencies]
toml = "0.4"
clap = { version = "2.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "0.7", features = ["rust-tls"] }
quick-error = "1.2"
rustls = "0.14"
